# WebRetrieve-Autonoma

./: .dockerignore  .gitignore  .netlifyignore  .vercelignore  Dockerfile  Procfile  README.md  api.py  app.py  docker-compose.yml  langgraph.json  main.py  models.json  netlify.toml  pyproject.toml  requirements.txt  vercel.json
WebRetrieve_Autonoma/: __init__.py  agent.py  config.py
WebRetrieve_Autonoma/api/: __init__.py  main.py  models.py
WebRetrieve_Autonoma/utils/: gemini_embeddings.py  google_search_tool.py  nodes.py  state.py  tools.py  tools_backup.py  tools_backup_delete.py  tools_new.py  tools_new_delete.py
docs/: API.md  __init__.py
my_agent/: __init__.py  agent.py  config.py
my_agent/api/: __init__.py  main.py  models.py
my_agent/utils/: nodes.py  rate_limiter.py  state.py  tools.py
netlify/functions/: api.py  hello.py  server.py
tests/: test_api.py
