[project]
name = "sydeny_startup_agent"
version = "0.1.0"
description = "Agentic Webscrapper and RAG Analyst"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.8",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.6",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.32.0",
    "langchain-core>=1.2.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["my_agent"]
