[project]
name = "sydeny_startup_agent"
version = "0.1.0"
description = "Agentic Webscrapper and RAG Analyst"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.8",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.6",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "google-genai>=1.0.0",
    "langchain-google-genai>=2.0.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.32.0",
    "langchain-core>=1.2.7",
    "rank-bm25>=0.2.2",
    "langchain-classic>=1.0.1",
    "langchain-openai>=0.2.0",
    "playwright>=1.57.0",
    "scikit-learn>=1.7.2",
]

[project.scripts]
app = "WebRetrieve_Autonoma.api.main:app"

[tool.vercel.scripts]
build = "python -m pip install --no-cache-dir --upgrade pip && python -m pip install --no-cache-dir build setuptools wheel && python -m pip install --no-cache-dir -e . && python -m playwright install chromium"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["WebRetrieve_Autonoma"]
